Fixed minor spacing problems

--- a/curriculum-vitae/src/App.module.css
+++ b/curriculum-vitae/src/App.module.css
@@ -106,3 +106,7 @@
 .faded {
   opacity: 0.75;
 }
+
+.summary-content {
+  margin-bottom: 0;
+}
