--- a/curriculum-vitae/src/index.css
+++ b/curriculum-vitae/src/index.css
@@ -42,7 +42,7 @@ code {
 h3 {
   letter-spacing: 2px;
   font-size: 1.2rem;
-  margin: 20px 0px 10px 0px;
+  margin: 15px 0px 10px 0px;
 }
 
 * {
